tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo<A B>
  : | A => B
  = | x => x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_4.kk:3:12
  │
3 │   = | x => x
  │            ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - B           | + A         |
    +---------------+-------------+
